# ITBase-

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_USAGE_GUIDE.md  AI_CONTEXT.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CURRENT_STATE.md  DEVELOPMENT_REPORT.md  DICTIONARIES_MANAGEMENT_PLAN.md  Dockerfile  Dockerfile.prod  Dockerfile.test  LICENSE  Makefile  Makefile.dev  PROBLEM_SOLUTION.md  PROJECT_STRUCTURE.md  README.dev.md  README.md  alembic.ini  cleanup_project.py  create_admin.py  demo_data.sql  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.override.yml.bak  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  generate_structure.py  gihabCom.txt  init_data.py  initial_data.yaml  issue_summary.md  openapi-assets.yaml  pyproject.toml  (+15 more)
agent_builder/: .gitignore  README.md  build.bat
alembic/: env.py
app/: __init__.py  config.py  flash.py  form_helpers.html  logging_config.py  main.py  templating.py  test_main.py
backups/: backup_2025-12-07_16-45-33.dump
docs/: 01_initial_database_seeding.md
initdb/: 01-init.sh  asset_types.json  departments.json  device_models.json  device_statuses.json  employees.json  locations.json  manufacturers.json
requirements/: base.txt  dev.txt  prod.txt
scripts/: Agent.ps1  test_components.json  Запустить_Инвентаризацию.bat
static/: dark_theme.css  main.css  styles.css
templates/: add_asset.html  asset_form.html  assets_list.html  audit_logs.html  base.html  dashboard.html  edit_asset.html  error.html  login.html  (+2 more)
(+157 files in other folders)
