[metadata]
description-file = README.md
license_files = LICENSE

[pycodestyle]
max-line-length = 88
exclude = .git,__pycache__,.tox,venv

[flake8]
max-line-length = 88
exclude = .git,__pycache__,.tox,venv
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E203, E501, W503
per-file-ignores =
    # E203: whitespace before ':' (conflicts with black)
    # E501: line too long (handled by black)
    # W503: line break before binary operator (conflicts with black)
    __init__.py: F401
    tests/*: S101

[bandit]
targets: app
exclude: .git,__pycache__,.tox,venv,tests
skips: B101

[coverage:run]
source = app
branch = True
omit =
    */__init__.py
    */tests/*
    */migrations/*
    */alembic/versions/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts = -v --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80 -n auto
asyncio_mode = auto

[egg_info]
tag_build =
tag_date = 0
